# fibonacci

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: main.yml
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
fibonacci/: CMakeLists.txt
fibonacci/include/: fibonacci.h
fibonacci/src/: fibonacci.cpp
fibonacci/test/: CMakeLists.txt
fibonacci/test/src/: tests.cpp
